# GradeIt

./: pyproject.toml
.github/wokflows/: aLL_BUILD.YML
.github/workflows/: all_build.yml
notebooks/: Train_Your_First_Wake_Word_Model.ipynb
src/: contents.json  main.py  utils.py
src/views/: __init__.py  adder_view.py  class_view.py  home_view.py  login_view.py  opening_view.py  signup_view.py
src/widgets/: __init__.py  neu_button.py  neu_container.py  neu_textfield.py  rank_item.py
